[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/guis/title_screen_options.gd" type="Script" id=1]
[ext_resource path="res://themes/curry/curry.tres" type="Theme" id=2]
[ext_resource path="res://themes/curry/red.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/restaurant_view_title.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 166
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 6 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -635, -274 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.929412, 0.803922, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_right = 744.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
custom_constants/separation = 20

[node name="MenuTitle" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
margin_right = 744.0
margin_bottom = 218.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
autowrap = true

[node name="Game" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 744.0
margin_bottom = 320.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Game"
expand_icon = true

[node name="Video" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 744.0
margin_bottom = 422.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Video"
expand_icon = true

[node name="Audio" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 744.0
margin_bottom = 524.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Audio"
expand_icon = true

[node name="Developer" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 544.0
margin_right = 744.0
margin_bottom = 626.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Developer"
expand_icon = true

[node name="ToTitleScreen" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 646.0
margin_right = 744.0
margin_bottom = 728.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "To Title Screen"
expand_icon = true

[node name="RestaurantView" type="TextureRect" parent="Background/HBoxContainer"]
margin_left = 764.0
margin_right = 1326.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.43
texture = ExtResource( 4 )
expand = true

[connection signal="pressed" from="Background/HBoxContainer/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/VBoxContainer/Developer" to="." method="_on_Developer_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/VBoxContainer/ToTitleScreen" to="." method="_on_ToTitleScreen_pressed"]
